fix bug displaying wordlist as lowercased instead of capitalized on mobile

--- a/style.css
+++ b/style.css
@@ -694,7 +694,7 @@ summary:focus {
 }
 
 .wordlist-item {
-  display: inline;
+  display: inline-block;
   text-transform: capitalize;
   list-style: none;
   color: var(--white2);
